refactoring | output token type for printAST